src/test/deca/syntax/invalid/without_class/missing_cparent_ifstatment.deca
// Description:
//    Missing closing parentesis in if statment 
//
// Result:
//    Syntax Error
//    line 11


{
    int x = 1;
    if(x > 0 {
        return x;
    }
}